added text, photos, and columns

--- a/interior-decoration.html
+++ b/interior-decoration.html
@@ -14,14 +14,15 @@
     <p class="intro">intro text.</p>
 
     <div class="column">
-      <img width="300px" class="my-class" src="img/dog1.jpg">
+      <img width="300px" class="my-class" src="img/bathbefore.jpeg">
       <p>Bathroom Remodel: Who would not want to relieve their bowels hereth?</p>
+      <img width="300px" class="my-class" src="img/bathafter.jpg">
     </div>
     <div class="column">
-        <img width="300px" class="my-class" src="img/dog1.jpg">
+        <img width="300px" class="my-class" src="img/roombefore.jpg">
         <p>Living Room Remodel: Does thou want to liveth in this room?</p>
+        <img width="300px" class="my-class" src="img/roomafter.jpg">
     </div>
 
-    <p class="author">text.</p>
   </body>
 </html>
