added text, formatting, and polished up positioning of columns

--- a/interior-decoration.html
+++ b/interior-decoration.html
@@ -11,16 +11,22 @@
     <h1>Lady Winchester's Interior Decoration Portfolio</h1>
     <h2>Behold! Check eth out my recent works of artistic interior decoration, think of hiring me too!</h2>
 
-    <p class="intro">intro text.</p>
-
     <div class="columnA">
+      BEFORE!
+      <br>
       <img width="300px" class="my-class" src="img/bathbefore.jpeg">
       <p>Bathroom Remodel: Who would not want to relieve their bowels hereth?</p>
+      AFTER!
+      <br>
       <img width="300px" class="my-class" src="img/bathafter.jpg">
     </div>
     <div class="columnB">
+      BEFORE!
+      <br>
         <img width="300px" class="my-class" src="img/roombefore.jpg">
         <p>Living Room Remodel: Does thou want to liveth in this room?</p>
+        AFTER!
+        <br>
         <img width="300px" class="my-class" src="img/roomafter.jpg">
     </div>
 
