--- a/interior-decoration.html
+++ b/interior-decoration.html
@@ -12,19 +12,29 @@
     <h2>Behold! Check eth out my recent works of artistic interior decoration, think of hiring me too!</h2>
 
     <div class="columnA">
+      <p class="headline">Bathroom Remodel: Who would not want to relieve their bowels hereth?</p>
       BEFORE!
       <br>
       <img width="300px" class="my-class" src="img/bathbefore.jpeg">
-      <p>Bathroom Remodel: Who would not want to relieve their bowels hereth?</p>
+      <br>
+      -DURING-
+      <br>
+      <img width="300px" class="my-class" src="img/bahtduring.jpeg">
+      <br>
       AFTER!
       <br>
       <img width="300px" class="my-class" src="img/bathafter.jpg">
     </div>
     <div class="columnB">
-      BEFORE!
-      <br>
+      <p class="headline">Living Room Remodel: Does thou want to liveth in this room?</p>
+        BEFORE!
+        <br>
         <img width="300px" class="my-class" src="img/roombefore.jpg">
-        <p>Living Room Remodel: Does thou want to liveth in this room?</p>
+        <br>
+        -DURING-
+        <br>
+        <img width="300px" class="my-class" src="img/roomduring.jpg">
+        <br>
         AFTER!
         <br>
         <img width="300px" class="my-class" src="img/roomafter.jpg">
